syntax = "proto3";

package login;
option go_package = "$GOPATH/src/authservice/pkg/pb";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}

service LoginService {
    rpc login(LoginRequest) returns (LoginResponse) {}
}
